--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -52,9 +52,9 @@
   padding: 10px; /* add some padding to the table cells */
 }
 
-.bar {
+/* .bar {
   margin-right: 17px;
-}
+} */
   
 pre {
   white-space: pre-wrap;
