--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<app-buffer *ngIf="isLoading"></app-buffer>
+
+<div class="container" *ngIf="!isLoading">
 
     <div class="container" id="pie_charts">
       <div class="bar" [chart]="onePieChart"></div>
