--- a/OPE-app2.0/frontend/src/app/components/navigation/navigation.component.html
+++ b/OPE-app2.0/frontend/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <span>
     <a routerLink="/" id="ope"> 
-      <span> OPE </span>
+      <span> MSIC </span>
     </a>
   </span>
   <span class="flexExpand"></span>
