--- a/OPE-app2.0/frontend/src/app/components/homepage/homepage.component.css
+++ b/OPE-app2.0/frontend/src/app/components/homepage/homepage.component.css
@@ -9,35 +9,41 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #90c1d7;
+  background-image: url('./image/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
   z-index: -1;
 }
+
 
 html, body {
   margin: 0;
   padding: 0;
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #90c1d7;
-}
-
 .box {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   padding: 20px;
   border-radius: 10px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 50px auto;
   width: 80%;
   max-width: 1000px;
+  animation: fadeIn 1s ease-in-out; 
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 42px;
   font-weight: bold;
   margin-top: 50px;
   margin-bottom: 20px;
@@ -46,14 +52,14 @@ h1 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 20px;
   margin-bottom: 30px;
   line-height: 1.5;
   text-align: justify;
 }
 
 a {
-  font-size: 16px;
+  font-size: 18px;
   padding: 8px 16px;
   margin-top: 10px;
   background-color: #90c1d7;
@@ -71,6 +77,11 @@ a:hover {
 
 a:hover:active {
   opacity: 0.8;
+}
+
+.mat-mdc-card {
+  box-shadow: 0px 2px 1px -1px rgba(255, 255, 255, 0), 0px 1px 1px 0px rgba(255, 255, 255, 0), 0px 1px 3px 0px rgba(255, 255, 255, 0);
+  --mdc-elevated-card-container-color: transparent;
 }
 
 @media only screen and (max-width: 768px) {
