--- a/OPE-app2.0/frontend/src/app/components/login/login.component.html
+++ b/OPE-app2.0/frontend/src/app/components/login/login.component.html
@@ -1,18 +1,24 @@
 <body>
   <div class="background"></div>
   <div class="form-container">
-    <form [formGroup]= "loginForm" (ngSubmit)= "login()" novalidate>
+    <form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
       <label>Login</label>
 
       <mat-form-field>
-        <mat-label>Email</mat-label>
+        <mat-label>
+          <mat-icon>email</mat-icon>
+          Email
+        </mat-label>
         <input matInput placeholder="Ex. Jeff@gmail.com" formControlName="email">
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Password</mat-label>
+        <mat-label>
+          <mat-icon>lock</mat-icon>
+          Password
+        </mat-label>
         <input matInput type="password" placeholder="Ex. Jon2002" formControlName="password">
-      </mat-form-field>    
+      </mat-form-field>
 
       <div class="form-links">
         <p>Don't have an account? <a routerLink="/signup">Signup now!</a></p>
@@ -21,7 +27,7 @@
       <button mat-raised-button type="submit" (click)="addShakeEffect()" [ngClass]="{ shake: loginForm.invalid }">
         <span>Login</span>
       </button>   
-      
+
     </form>
   </div>
 </body>
