--- a/OPE-app2.0/frontend/src/app/components/signup/signup.component.css
+++ b/OPE-app2.0/frontend/src/app/components/signup/signup.component.css
@@ -4,8 +4,17 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #90c1d7; 
+  background-image: url('./img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.5;
   z-index: -1;
+}
+
+mat-icon {
+  margin-right: 10px;
+  font-size: 20px;
+  vertical-align: middle;
 }
 
 .form-container {
@@ -16,6 +25,18 @@
   padding: 50px;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, -20px, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 form {
