--- a/OPE-app2.0/frontend/src/app/components/navigation/navigation.component.css
+++ b/OPE-app2.0/frontend/src/app/components/navigation/navigation.component.css
@@ -26,7 +26,7 @@ a {
   line-height: 56px;
   height: 56px;
   min-width: 120px;
-  font-family: Arial, sans-serif; /* Change the font-family to your desired professional font */
+  font-family: Arial, sans-serif;
 }
 
 a:hover,
