--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -108,3 +108,16 @@ tr:nth-child(even) {
 .center-content {
     place-content: center;
 }
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../prodeval/img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.6;
+  z-index: -1;
+}
