--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
@@ -28,6 +28,42 @@
         line-height: 1.5;
         color: #333;
       }
+
+      .instruction {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 14px;
+        color: #333;
+      }
+
+      .instruction-card {
+        max-width: 300px;
+        margin: 20px auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 11px;
+        position: absolute;
+        top: 60px;
+        right: 20px;
+      }
+      
+      .instruction-title {
+        font-weight: bold;
+        margin-bottom: 10px;
+        text-align: left; 
+      }
+      
+      .instruction-list {
+        padding-left: 20px;
+        list-style-type: disc; 
+      }
+      
+      .instruction-list li {
+        margin-bottom: 5px;
+      }
+      
       
       h1, h2 {
         font-weight: bold;
@@ -35,25 +71,33 @@
         margin-bottom: 20px;
         font-family: 'Helvetica Neue', Arial, sans-serif; 
       }
-      
-      h1 {
+
+
+      /* h1 {
         font-size: 36px;
         color: #333;
         text-align: left;
         margin-top: -10px;
-      }
+      } */
       
       h2 {
         font-size: 24px;
         color: #444;
-        margin-top: -60px;
+        margin-top: 20px;
+        position: absolute;
+        top: 60px;
+        left: 20px;
+
       }
       
       p {
         margin-top: 0;
         margin-bottom: 20px;
-        margin-top: 20px;
+        margin-top: 10px;
         font-family: 'Montserrat', Arial, sans-serif;
+        position: absolute;
+        top: 108px;
+        left: 20px;
       }
 
       a {
@@ -64,7 +108,7 @@
       label[for="review1"] {
         font-weight: bold;
         display: block;
-        margin-top:50px; 
+        margin-top:100px; 
       }
 
       header {  
@@ -120,7 +164,7 @@
         border-radius: 5px;
         display: block;
         margin: -10px auto 20px;
-        transform: translateX(-25%);
+        transform: translateX(-18%);
         transition: opacity 0.5s ease-in-out;
       }
 
@@ -150,7 +194,7 @@
       }
       
       textarea {
-        width: 300%;
+        width: 380%;
         height: 100%;
         padding: 1px;
         font-size: 16px;
@@ -158,7 +202,39 @@
         border: 1px solid #ccc;
         /* margin-bottom: 10px; */
         resize:none;
-        transform: translateX(-32%);
+        transform: translateX(-35%);
+      }
+
+      
+      .input-container {
+        position: relative;
+      }
+      
+      .textarea-container {
+        display: flex;
+        align-items: center;
+      }
+      
+      .textarea-container textarea {
+        width: 100%;
+      }
+      
+      .icon {
+        position: absolute;
+        top: 105%;
+        right: -143%;
+        transform: translateY(-200%);
+        cursor: pointer;
+        color: #999;
+        font-size: 20px;
+      }
+      
+      .icon i {
+        font-size: 18px;
+      }
+      
+      .icon:hover {
+        color: #333;
       }
 
       textarea::placeholder {
@@ -194,5 +270,5 @@
       }
 
       footer p {
-      margin: 0;
+        margin-top: 800px;
       }
