--- a/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.html
@@ -1,1 +1,6 @@
 <p>savedeval works!</p>
+<button (click)="add()">Add Point!</button>
+<div [chart]="wordcloud"></div>
+<p>Visualizing product reviews on a word cloud is a compelling and intuitive way to gain insights into customer sentiments and identify key themes or trends. 
+    A word cloud is a graphical representation of text data, where the size of each word corresponds to its frequency or importance within the dataset.</p>
+{{ text }}
