improved design and updated response data from latest final_app.py

--- a/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.css
@@ -24,12 +24,14 @@
 }
 
 
+/* Flex Container */
+
 .main-body {
     background-color: white;
     border: 1px solid black;
     padding: 0 50px;
     min-width: 360px;
-    max-width: 620px;
+    max-width: 720px;
 }
 
 .second {
@@ -39,6 +41,8 @@
 main {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    gap: 0 20px;
     min-height: 100vh;
     flex-wrap: wrap;
     width: 100%;
