modified charts and highlighted words

--- a/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.html
@@ -59,22 +59,42 @@
 
 
   <mat-card class="second main-body" *ngIf="showBreakdown">
-    <h1>Aspect Breakdown</h1>
+    <h1>Aspect "{{ currentAspect }}" Breakdown</h1>
     <!-- Render Aspect Breakdown -->
     <ng-container *ngIf="breakdown">
       <!-- <div class="bar" [chart]="onePieChart"></div> -->
-      <div class="bar" [chart]="onePieChart"></div>
-
+      <div *ngFor="let pieChart of pieCharts | keyvalue">
+        <div class="bar" *ngIf="pieChart.key === currentAspect" [chart]="pieChart.value"></div>
+      </div>
+      
       <h2>Most Positive Sentence</h2>
-      {{ breakdown.Most_Positive_Sentence }}
+      <p>
+        <ng-container *ngFor="let word of splitSentence(breakdown.Most_Positive_Sentence)">
+          <span [ngStyle]="{'background-color': isPositiveWord(word) ? 'green' : 'transparent'}">{{ word }}</span>
+        </ng-container>
+      </p>
 
       <h2>Most Negative Sentence</h2>
-      {{ breakdown.Most_Negative_Sentence }}
+      <p>
+        <ng-container *ngFor="let word of splitSentence(breakdown.Most_Negative_Sentence)">
+          <span [ngStyle]="{'background-color': isNegativeWord(word) ? 'red' : 'transparent'}">{{ word }}</span>
+        </ng-container>
+      </p>
 
-      <h2>Positive Word: {{ breakdown.Positive_Word }}</h2>
-      <h2>Negative Word: {{ breakdown.Negative_Word }}</h2>
-      <h2>Normalized Probability: {{ breakdown.Normalized_Proba }}</h2>
-      <h2>Normalized Sentiment: {{ breakdown.Normalized_Sentiment }}</h2>
+      <h2>Word with the highest positive probability:</h2>
+      <h4>"{{ breakdown.Positive_Word }}"</h4>
+      <h2>Word with the highest negative probability:</h2>
+      <h4>"{{ breakdown.Negative_Word }}"</h4>
+      <h2>Normalized Sentiment Score: </h2>
+      <h4>Sentiment: {{ breakdown.Normalized_Sentiment }} | Probability: {{ breakdown.Normalized_Proba }}</h4>
+      <br>
+      <br>
+      <h2>Explanation:</h2>
+      <p>
+        The raw sentiment score is a method for calculating sentiment by counting the frequency of the aspect in positive and negative sentences. On the other hand, the normalized sentiment score is a value between -1 and 1, where -1 is the most negative sentiment and 1 is the most positive sentiment. It is calculated by computing for the average probability of both the positive and negative sentences that contain the aspect. If the average of the positive is greater than the average of the negative, then the aspect is considered positive. Otherwise, it is considered negative.
+      </p>
+      <!-- <h2>Normalized Probability: {{ breakdown.Normalized_Proba }}</h2>
+      <h2>Normalized Sentiment: {{ breakdown.Normalized_Sentiment }}</h2> -->
     </ng-container>
   </mat-card>
 
