--- a/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
+++ b/OPE-app2.0/frontend/src/app/components/addprod/addprod.component.css
@@ -154,14 +154,16 @@
         display: block;
         margin: -10px auto 20px;
         transform: translateX(-18%);
-        transition: opacity 0.5s ease-in-out;
+        transition: opacity 0.3s ease-in-out;
       }
 
       .fade-in {
         opacity: 1;
+        transition-duration: 0.3s;
       }
       
       .fade-out {
+        transition-duration: 0.3s;
         opacity: 0;
       }
 
