--- a/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.css
@@ -38,20 +38,34 @@
 .main-body {
     background-color: white;
     padding: 20px 50px;
-    min-width: 360px;
+    /* min-width: 360px; */
     max-width: 720px;
 }
 
 .second {
-    min-width: 300px;
+    min-width: 0px;
+    /* min-width: 300px; */
+
+    overflow-x: hidden;
 
     display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+
+    opacity: 0.0001;
+    transition: opacity 2s, width 0.5s;
+}
+
+.second.show {
+    opacity: 1;
+    min-width: 300px;
 }
 
 .second > div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -88,7 +102,7 @@ main {
     padding: 16px;
     color: black;
     margin-left: 12px;
-    border-radius: 16px;
+    border-radius: 4px 32px 32px 32px;
 }
 
 .sample-review.positive-background {
@@ -144,4 +158,18 @@ main {
 
 #aspect-breakdown-list tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../prodeval/img/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.6;
+    z-index: -1;
 }
